--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  google_fonts : 
+  
   haptic_feedback: 
   animated_text_kit: 
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
